--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
 		"astro": "astro"
 	},
 	"dependencies": {
-		"astro": "^4.8.3",
 		"@astrojs/check": "^0.6.0",
+		"astro": "^4.8.3",
+		"sass": "^1.77.1",
 		"typescript": "^5.4.5"
 	}
 }
