--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^10.0.6",
     "sass": "^1.77.8"
   },
   "devDependencies": {
